--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,7 @@
     "strict": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
+    "emitDecoratorMetadata": true
   },
-  "exclude": [
-    "dist",
-    "generated",
-    "build",
-    "node_modules"
-  ]
+  "exclude": ["dist", "generated", "build", "node_modules"]
 }
