--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext ts",
     "format": "prettier --write .",
-    "generate": "openapi --input ./docs/openapi.yaml --output ./generated --exportServices=false"
+    "generate": "openapi --input ./docs/openapi.yaml --output ./generated --exportServices=false --useUnionTypes",
+    "postman": "tsoa spec && openapi2postmanv2  -s public/swagger.json -o docs/postman_collection.json"
   },
   "keywords": [],
   "author": "",
@@ -31,10 +32,12 @@
     "axios": "^0.24.0",
     "axios-retry": "^3.2.4",
     "koa": "^2.13.4",
+    "koa-bodyparser": "^4.3.0",
     "koa-static": "^5.0.0",
     "tsoa": "^3.14.1"
   },
   "devDependencies": {
+    "@types/koa-bodyparser": "^4.3.5",
     "@types/koa-static": "^4.0.2",
     "@types/koa__router": "^8.0.11",
     "@types/node": "^17.0.8",
@@ -45,6 +48,7 @@
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.4",
     "nodemon": "^2.0.15",
+    "openapi-to-postmanv2": "^2.13.0",
     "openapi-typescript-codegen": "^0.13.0",
     "prettier": "2.5.1",
     "ts-node": "^10.4.0",
