--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,10 @@
 {
   "singleQuote": true,
-  "trailingComma": "all",
+  "semi": true,
+  "useTabs": false,
+  "bracketSpacing": true,
+  "trailingComma": "es5",
+  "tabWidth": 2,
   "overrides": [
     {
       "files": ["*.yml", "*.yaml"],
